--- a/configs/leakage/wetlab_loso_deep.yaml
+++ b/configs/leakage/wetlab_loso_deep.yaml
@@ -3,27 +3,27 @@ dataset_name: wetlab
 has_null: True
 anno_json: [
   'data/wetlab/annotations/loso_sbj_0.json',
-  'data/wetlab/annotations/loso_sbj_1.json',
-  'data/wetlab/annotations/loso_sbj_2.json',
-  'data/wetlab/annotations/loso_sbj_3.json',
-  'data/wetlab/annotations/loso_sbj_4.json',
-  'data/wetlab/annotations/loso_sbj_5.json',
-  'data/wetlab/annotations/loso_sbj_6.json',
-  'data/wetlab/annotations/loso_sbj_7.json',
-  'data/wetlab/annotations/loso_sbj_8.json',
-  'data/wetlab/annotations/loso_sbj_9.json',
-  'data/wetlab/annotations/loso_sbj_10.json',
-  'data/wetlab/annotations/loso_sbj_11.json',
-  'data/wetlab/annotations/loso_sbj_12.json',
-  'data/wetlab/annotations/loso_sbj_13.json',
-  'data/wetlab/annotations/loso_sbj_14.json',
-  'data/wetlab/annotations/loso_sbj_15.json',
-  'data/wetlab/annotations/loso_sbj_16.json',
-  'data/wetlab/annotations/loso_sbj_17.json',
-  'data/wetlab/annotations/loso_sbj_18.json',
-  'data/wetlab/annotations/loso_sbj_19.json',
-  'data/wetlab/annotations/loso_sbj_20.json',
-  'data/wetlab/annotations/loso_sbj_21.json'
+  #'data/wetlab/annotations/loso_sbj_1.json',
+  #'data/wetlab/annotations/loso_sbj_2.json',
+  #'data/wetlab/annotations/loso_sbj_3.json',
+  #'data/wetlab/annotations/loso_sbj_4.json',
+  #'data/wetlab/annotations/loso_sbj_5.json',
+  #'data/wetlab/annotations/loso_sbj_6.json',
+  #'data/wetlab/annotations/loso_sbj_7.json',
+  #'data/wetlab/annotations/loso_sbj_8.json',
+  #'data/wetlab/annotations/loso_sbj_9.json',
+  #'data/wetlab/annotations/loso_sbj_10.json',
+  #'data/wetlab/annotations/loso_sbj_11.json',
+  #'data/wetlab/annotations/loso_sbj_12.json',
+  #'data/wetlab/annotations/loso_sbj_13.json',
+  #'data/wetlab/annotations/loso_sbj_14.json',
+  #'data/wetlab/annotations/loso_sbj_15.json',
+  #'data/wetlab/annotations/loso_sbj_16.json',
+  #'data/wetlab/annotations/loso_sbj_17.json',
+  #'data/wetlab/annotations/loso_sbj_18.json',
+  #'data/wetlab/annotations/loso_sbj_19.json',
+  #'data/wetlab/annotations/loso_sbj_20.json',
+  #'data/wetlab/annotations/loso_sbj_21.json'
 ]
 dataset: {
   sens_folder: ./data/wetlab/raw/inertial,
@@ -52,7 +52,7 @@ train_cfg: {
   weighted_loss: True,
 }
 loader: {
-  train_batch_size: 100,
+  train_batch_size: 10,
   test_batch_size: 1,
 }
 
