- Evaluation scripts for neptune runs - Script that generates plots - Adjustment to Leakage versions

--- a/configs/leakage/wear_loso_tiny.yaml
+++ b/configs/leakage/wear_loso_tiny.yaml
@@ -2,23 +2,23 @@ name: tinyhar
 dataset_name: wear
 has_null: True
 anno_json: [
-  'data/annotations/loso_sbj_0.json',
-  'data/annotations/loso_sbj_1.json',
-  'data/annotations/loso_sbj_2.json',
-  'data/annotations/loso_sbj_3.json',
-  'data/annotations/loso_sbj_4.json',
-  'data/annotations/loso_sbj_5.json',
-  'data/annotations/loso_sbj_6.json',
-  'data/annotations/loso_sbj_7.json',
-  'data/annotations/loso_sbj_8.json',
-  'data/annotations/loso_sbj_9.json',
-  'data/annotations/loso_sbj_10.json',
-  'data/annotations/loso_sbj_11.json',
-  'data/annotations/loso_sbj_12.json',
-  'data/annotations/loso_sbj_13.json',
-  'data/annotations/loso_sbj_14.json',
-  'data/annotations/loso_sbj_15.json',
-  'data/annotations/loso_sbj_16.json',
+  #'data/annotations/loso_sbj_0.json',
+  #'data/annotations/loso_sbj_1.json',
+  #'data/annotations/loso_sbj_2.json',
+  #'data/annotations/loso_sbj_3.json',
+  #'data/annotations/loso_sbj_4.json',
+  #'data/annotations/loso_sbj_5.json',
+  #'data/annotations/loso_sbj_6.json',
+  #'data/annotations/loso_sbj_7.json',
+  #'data/annotations/loso_sbj_8.json',
+  #'data/annotations/loso_sbj_9.json',
+  #'data/annotations/loso_sbj_10.json',
+  #'data/annotations/loso_sbj_11.json',
+  #'data/annotations/loso_sbj_12.json',
+  #'data/annotations/loso_sbj_13.json',
+  #'data/annotations/loso_sbj_14.json',
+  #'data/annotations/loso_sbj_15.json',
+  #'data/annotations/loso_sbj_16.json',
   'data/annotations/loso_sbj_17.json',
 ]
 dataset: {
